Refactoring test class PipelineProject2Test (#692)
Refactoring test

---------

Co-authored-by: YevgenyN <evgenii.tst@gmail.com>