@@ -5,24 +5,40 @@ import org.openqa.selenium.WebElement;
 import org.openqa.selenium.interactions.Actions;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.Select;
-import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 import school.redrover.runner.BaseTest;
 import school.redrover.runner.TestUtils;
 
-import java.time.Duration;
 
 public class PipelineProject2Test extends BaseTest {
+
+    private enum ItemTypes {
+        PIPELINE("Pipeline"),
+        FOLDER("Folder");
+
+        private final String htmlTest;
+
+        ItemTypes(String htmlTest) {
+            this.htmlTest = htmlTest;
+        }
+
+        public String getHtmlTest() {
+            return htmlTest;
+        }
+    }
 
     private static final String PROJECT_NAME = "MyPipelineProject";
     private static final String FOLDER_NAME = "MyFolder";
 
-    private void createItem(String nameItem, String locator) {
+    private static final String ITEM_NAME_LOCATOR = "//span[text()='%s']";
+
+    private void createItemAndGoToMainPage(ItemTypes itemType, String itemName) {
         getDriver().findElement(By.xpath("//a[@href='/view/all/newJob']")).click();
-        getDriver().findElement(By.id("name")).sendKeys(nameItem);
-        getDriver().findElement(By.xpath(locator)).click();
+        getDriver().findElement(By.id("name")).sendKeys(itemName);
+        getDriver().findElement(By.xpath(ITEM_NAME_LOCATOR.formatted(itemType.getHtmlTest()))).click();
         getDriver().findElement(By.id("ok-button")).click();
+        getDriver().findElement(By.id("jenkins-name-icon")).click();
     }
 
     private void goToMainPage() {
@@ -30,171 +46,115 @@ public class PipelineProject2Test extends BaseTest {
     }
 
     @Test
-    public void testCreatePipelineProjectWithValidName() {
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(10));
+    public void testCreateWithValidName() {
+        createItemAndGoToMainPage(ItemTypes.PIPELINE, PROJECT_NAME);
 
-        createItem(PROJECT_NAME, "//span[text()='Pipeline']");
-        goToMainPage();
-
-        String pipelineProjectName = wait.until(ExpectedConditions.visibilityOfElementLocated(
-                By.xpath(String.format("//span[text()='%s']", PROJECT_NAME)))).getText();
+        String pipelineProjectName = getWait5().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath(ITEM_NAME_LOCATOR.formatted(PROJECT_NAME)))).getText();
 
         Assert.assertEquals(pipelineProjectName, PROJECT_NAME);
     }
 
     @Test
-    public void testCreatePipelineProjectWithEmptyName() {
-
+    public void testCreateWithEmptyName() {
         getDriver().findElement(By.xpath("//a[@href='/view/all/newJob']")).click();
 
-        getDriver().findElement(By.xpath("//span[text()='Pipeline']")).click();
+        getDriver().findElement(By.xpath(ITEM_NAME_LOCATOR.formatted(ItemTypes.PIPELINE.getHtmlTest()))).click();
 
-        String errorMessage = getDriver()
-                .findElement(By.id("itemname-required")).getText();
-
-        Assert.assertEquals(errorMessage, "» This field cannot be empty, please enter a valid name");
+        Assert.assertEquals(
+                getDriver().findElement(By.id("itemname-required")).getText(),
+                "» This field cannot be empty, please enter a valid name");
     }
 
     @Test
-    public void testCreatePipelineProjectWithDuplicateName() {
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(10));
+    public void testCreateWithDuplicateName() {
+        createItemAndGoToMainPage(ItemTypes.PIPELINE, PROJECT_NAME);
 
-        createItem(PROJECT_NAME, "//span[text()='Pipeline']");
-        goToMainPage();
-
-        wait.until(ExpectedConditions.visibilityOfElementLocated(
+        getWait5().until(ExpectedConditions.visibilityOfElementLocated(
                 By.xpath("//a[@href='/view/all/newJob']"))).click();
 
         getDriver().findElement(By.id("name")).sendKeys(PROJECT_NAME);
-        getDriver().findElement(By.xpath("//span[text()='Pipeline']")).click();
+        getDriver().findElement(By.xpath(ITEM_NAME_LOCATOR.formatted(ItemTypes.PIPELINE.getHtmlTest()))).click();
 
-        String errorMessage = getDriver()
-                .findElement(By.id("itemname-invalid")).getText();
-
-        Assert.assertEquals(errorMessage, String.format("» A job already exists with the name ‘%s’", PROJECT_NAME));
+        Assert.assertEquals(
+                getDriver().findElement(By.id("itemname-invalid")).getText(),
+                "» A job already exists with the name ‘%s’".formatted(PROJECT_NAME));
     }
 
     @Test
-    public void testAddDescriptionForPipelineProject() {
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(10));
-
+    public void testAddDescription() {
         String description = "Description pipeline project.";
 
-        createItem(PROJECT_NAME, "//span[text()='Pipeline']");
-        goToMainPage();
+        createItemAndGoToMainPage(ItemTypes.PIPELINE, PROJECT_NAME);
 
-        wait.until(ExpectedConditions.visibilityOfElementLocated(
-                        By.xpath(String.format("//span[text()='%s']", PROJECT_NAME))))
-                .click();
+        getWait5().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath(ITEM_NAME_LOCATOR.formatted(PROJECT_NAME)))).click();
 
         getDriver().findElement(By.id("description-link")).click();
         getDriver()
-                .findElement(By.xpath("//textarea[@name='description']"))
-                .sendKeys(description);
+                .findElement(By.xpath("//textarea[@name='description']")).sendKeys(description);
         getDriver().findElement(By.xpath("//button[@name='Submit']")).click();
 
-        String actualDescription = getDriver()
-                .findElement(By.xpath("//div[@id='description']/div"))
-                .getText();
-
-        Assert.assertEquals(actualDescription, description);
+        Assert.assertEquals(
+                getDriver().findElement(By.xpath("//div[@id='description']/div")).getText(),
+                description);
     }
 
     @Test
-    public void testMovePipelineProjectToFolder() {
+    public void testMoveProjectToFolder() {
+        createItemAndGoToMainPage(ItemTypes.FOLDER, FOLDER_NAME);
+        createItemAndGoToMainPage(ItemTypes.PIPELINE, PROJECT_NAME);
 
-        createItem(FOLDER_NAME, "//span[text()='Folder']");
-        goToMainPage();
-
-        createItem(PROJECT_NAME, "//span[text()='Pipeline']");
-        goToMainPage();
-
-        getDriver()
-                .findElement(By.xpath(String.format("//span[text()='%s']", PROJECT_NAME)))
-                .click();
-
-        getDriver()
-                .findElement(By.xpath("//a[contains(@href, 'move')]"))
-                .click();
+        getDriver().findElement(By.xpath(ITEM_NAME_LOCATOR.formatted(PROJECT_NAME))).click();
+        getDriver().findElement(By.xpath("//a[contains(@href, 'move')]")).click();
 
         new Select(getDriver().findElement(By.xpath("//select[@name='destination']")))
                 .selectByValue("/" + FOLDER_NAME);
 
-        getDriver()
-                .findElement(By.xpath("//button[@name='Submit']"))
-                .click();
+        getDriver().findElement(By.xpath("//button[@name='Submit']")).click();
         goToMainPage();
 
-        getDriver()
-                .findElement(By.xpath(String.format("//span[text()='%s']", FOLDER_NAME)))
-                .click();
+        getDriver().findElement(By.xpath(ITEM_NAME_LOCATOR.formatted(FOLDER_NAME))).click();
 
-        String movedPipelineProjectName = getDriver()
-                .findElement(By.xpath(String.format("//span[text()='%s']", PROJECT_NAME)))
-                .getText();
-
-        Assert.assertEquals(movedPipelineProjectName, PROJECT_NAME);
+        Assert.assertEquals(
+                getDriver().findElement(By.xpath(ITEM_NAME_LOCATOR.formatted(PROJECT_NAME))).getText(), PROJECT_NAME);
     }
 
     @Test
-    public void testDeletePipelineProjectViaSidePanel() {
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(10));
+    public void testDeleteViaSidePanel() {
+        createItemAndGoToMainPage(ItemTypes.PIPELINE, PROJECT_NAME);
 
-        createItem(PROJECT_NAME, "//span[text()='Pipeline']");
-        goToMainPage();
+        getWait5().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath(ITEM_NAME_LOCATOR.formatted(PROJECT_NAME)))).click();
 
-        wait.until(ExpectedConditions.visibilityOfElementLocated(
-                        By.xpath(String.format("//span[text()='%s']", PROJECT_NAME)))
-                )
-                .click();
+        getDriver().findElement(By.xpath("//a[contains(@data-url, 'doDelete')]")).click();
 
-        getDriver()
-                .findElement(By.xpath("//a[contains(@data-url, 'doDelete')]"))
-                .click();
+        getWait5().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath("//button[@data-id='ok']"))).click();
 
-        wait.until(ExpectedConditions.visibilityOfElementLocated(
-                        By.xpath("//button[@data-id='ok']"))
-                )
-                .click();
-
-        boolean isElementPresent = getDriver()
-                .findElements(By.xpath(String.format("//span[text()='%s']", PROJECT_NAME)))
-                .isEmpty();
-
-        Assert.assertTrue(isElementPresent);
+        Assert.assertTrue(getDriver().findElements(By.xpath(ITEM_NAME_LOCATOR.formatted(PROJECT_NAME))).isEmpty());
     }
 
     @Test
-    public void testDeletePipelineProjectViaChevron() {
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(20));
+    public void testDeleteViaChevron() {
+        createItemAndGoToMainPage(ItemTypes.PIPELINE, PROJECT_NAME);
 
-        createItem(PROJECT_NAME, "//span[text()='Pipeline']");
-        goToMainPage();
+        WebElement projectItem = getWait5().until(ExpectedConditions.presenceOfElementLocated(
+                By.xpath("//a[contains(@href, 'job/%s') and contains(@class, 'model-link')]".formatted(PROJECT_NAME))));
+        new Actions(getDriver()).moveToElement(projectItem).perform();
 
-        WebElement projectItem = wait.until(ExpectedConditions.presenceOfElementLocated(
-                By.xpath(String.format(
-                        "//a[contains(@href, 'job/%s') and contains(@class, 'model-link')]",
-                        PROJECT_NAME))));
-
-        Actions actions = new Actions(getDriver());
-        actions.moveToElement(projectItem).perform();
-
-        WebElement chevronButton = wait.until(ExpectedConditions.visibilityOfElementLocated(
-                By.xpath(String.format("//span[text()='%s']/following-sibling::button", PROJECT_NAME))));
+        WebElement chevronButton = getWait5().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath("//span[text()='%s']/following-sibling::button".formatted(PROJECT_NAME))));
 
         TestUtils.moveAndClickWithJavaScript(getDriver(), chevronButton);
 
-        wait.until(ExpectedConditions.visibilityOfElementLocated(
+        getWait10().until(ExpectedConditions.visibilityOfElementLocated(
                 By.xpath("//button[contains(@href, 'doDelete')]"))).click();
 
-        wait.until(ExpectedConditions.visibilityOfElementLocated(
+        getWait10().until(ExpectedConditions.visibilityOfElementLocated(
                 By.xpath("//button[@data-id='ok']"))).click();
 
-        boolean isElementPresent = getDriver()
-                .findElements(By.xpath(String.format("//span[text()='%s']", PROJECT_NAME)))
-                .isEmpty();
-
-        Assert.assertTrue(isElementPresent);
+        Assert.assertTrue(getDriver().findElements(By.xpath(String.format(ITEM_NAME_LOCATOR, PROJECT_NAME))).isEmpty());
     }
 
 }
